fixed grid for images

--- a/src/index.html
+++ b/src/index.html
@@ -315,26 +315,29 @@
                 <cite>charles dickens</cite>
             </blockquote>
         </section>
+        <!--*********** BLOCK IMAGES ************-->
         <section class="doitby-yourself">
             <h3>do it by yoursalf</h3>
-            <div id="doitby-yoursalf__img-b">
-                <div class="img-computer-table doitby-yourself__img-b1"></div>
+            <!-- <div id="doitby-yoursalf__img-b">
+                </div> -->
                 <div class="doitby-yourself__img-b2">
                     <div>
+                        <div class="img-computer-table"></div>
                         <div class="img-human"></div>
                         <div class="img-mountan">
                             <button>view demo</button>
                         </div>
                     </div>
                     <div class="img-snow-mountan"></div>
-                    <div>
-                        <div class="img-fog-mountan"></div>
-                        <div class="img-room"></div>
+                        <div>
+                            <div class="img-fog-mountan"></div>
+                            <div class="img-room"></div>
+                            <div class="img-birds"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="img-birds doitby-yourself__img-b3"></div>
-            </div>
+                    <!-- <div class="clearfix"></div> -->
         </section>
+        <!--************ BLOCK IMAGES END ************** -->
         <section class="join-over">
             <h2>Join over 1 million customers</h2>
             <!-- ************* PRICES ****************** -->
@@ -365,38 +368,42 @@
         <div class="footer-content-bg">
             <div class="footer-logo">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36px" height="33px">
-                    <path fill-rule="evenodd" stroke="rgb(35, 35, 35)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter"
+                    <path fill-rule="evenodd" stroke="rgb(255, 255, 255)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter"
                         fill="none" d="M17.400,0.999 L1.000,20.053 L17.400,30.999 L34.000,19.851 L17.400,0.999 Z" />
-                    <path fill-rule="evenodd" stroke="rgb(35, 35, 35)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter"
+                    <path fill-rule="evenodd" stroke="rgb(255, 255, 255)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter"
                         fill="none" d="M17.000,2.000 L18.000,2.000 L18.000,30.000 L17.000,30.000 L17.000,2.000 Z" />
                 </svg>
             </div>
-            <ul class="footer-menu1">
-                <li class="footer-menu__item"><a href="#">pages</a></li>
-                <li class="footer-menu__item"><a href="#">elements</a></li>
-                <li class="footer-menu__item"><a href="#">product</a></li>
-                <li class="footer-menu__item"><a href="#">blog</a></li>
-                <li class="footer-menu__item"><a href="#">work</a></li>
-            </ul>
-            <ul class="footer-menu2">
-                <li class="footer-menu__item"><a href="#">support</a></li>
-                <li class="footer-menu__item"><a href="#">answers</a></li>
-                <li class="footer-menu__item"><a href="#">workshops</a></li>
-                <li class="footer-menu__item"><a href="#">specials</a></li>
-            </ul>
-            <ul class="footer-menu3">
-                <li class="footer-menu__item"><a href="#">terms of use</a></li>
-                <li class="footer-menu__item"><a href="#">privacy policy</a></li>
-                <li class="footer-menu__item"><a href="#">contacts</a></li>
-                <li class="footer-menu__item"><a href="#">about us</a></li>
-            </ul>
+            <div class="footer-menu">
+                <ul class="footer-menu__1">
+                    <li class="footer-menu__item"><a href="#">pages</a></li>
+                    <li class="footer-menu__item"><a href="#">elements</a></li>
+                    <li class="footer-menu__item"><a href="#">product</a></li>
+                    <li class="footer-menu__item"><a href="#">blog</a></li>
+                    <li class="footer-menu__item"><a href="#">work</a></li>
+                </ul>
+                <ul class="footer-menu__2">
+                    <li class="footer-menu__item"><a href="#">support</a></li>
+                    <li class="footer-menu__item"><a href="#">answers</a></li>
+                    <li class="footer-menu__item"><a href="#">workshops</a></li>
+                    <li class="footer-menu__item"><a href="#">specials</a></li>
+                </ul>
+                <ul class="footer-menu__3">
+                    <li class="footer-menu__item"><a href="#">terms of use</a></li>
+                    <li class="footer-menu__item"><a href="#">privacy policy</a></li>
+                    <li class="footer-menu__item"><a href="#">contacts</a></li>
+                    <li class="footer-menu__item"><a href="#">about us</a></li>
+                </ul>
+            </div>
             <div class="info">
                 <div class="made-by">
-                    <span>
-                        made by <span>Craft Work</span>
-                    </span>
+                    <span>made by</span><br>
+                    <span></span>
                 </div>
-                <span><a href="https://www.getcraftwork.com">www.getcraftwork.com</a></span>
+                <span>
+                    <a href="https://tsindiaikinal.github.io/">tsindiaikinal.github.io</a>
+                <!-- <a href="https://www.getcraftwork.com">www.getcraftwork.com</a> -->
+                </span>
                 <ul class="social-nets">
                     <li class="social-nets__item">
                         <a href="https://twitter.com" target="blank"></a></li>
