--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,7 @@
                 </section>
             </div>
         </section>
+        <!-- ******** BLOCK QUOTES ************ -->
         <section class="quotes">
         <blockquote>
                  <span class="quotes__top">
