remove unnecessary files

--- a/src/index.html
+++ b/src/index.html
@@ -189,9 +189,9 @@
                 </div>
                 <div class="background-slider">
                     <div id="ipad-slider">
-                        <div>dron</div>
-                        <div>brothers1</div>
-                        <div>brothers2</div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
                     </div>
                 </div>
             </div>
