--- a/src/index.html
+++ b/src/index.html
@@ -417,6 +417,7 @@
     </footer>
     </div>
     <span style="color: red; font-size: 1.5rem;">30 гр.</span>
+    <div></div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-1.4.1.min.js"></script>
     <script src="js/slick.min.js"></script>
